--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
     "framer-motion": "^5",
+    "i18next": "^21.6.10",
     "next": "12.0.7",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-i18next": "^11.15.3",
     "react-icons": "^4.3.1"
   },
   "devDependencies": {
