--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
     "framer-motion": "^5",
-    "next": "12.0.7",
+    "next": "12.0.10",
+    "next-i18next": "^10.2.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1"
