Social icons updated

--- a/package.json
+++ b/package.json
@@ -14,9 +14,10 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.454.0",
-    "next": "14.2.16",
+    "next": "15.2.0",
     "react": "^18",
     "react-dom": "^18",
+    "styled-jsx": "^5.1.6",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7"
   },
